--- a/deployment/000-default.conf
+++ b/deployment/000-default.conf
@@ -3,14 +3,18 @@
 <VirtualHost *:80>
      ServerAdmin louis.suo@gmail.com
      DocumentRoot /var/www/public
+     SetEnv APPLICATION_ENV "development"
 
      ErrorLog ${APACHE_LOG_DIR}/error.log
      CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     <Directory /var/www>
         RewriteEngine On
+        DirectoryIndex index.php
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
+        Order allow,deny
+        Allow from all
     </Directory>
 </VirtualHost>
