--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": "~2.4.11"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.27"
+    },
     "autoload": {
         "psr-0": { "Album": "module/Album/src/" }
     }
