read from dynamodb

--- a/deployment/000-default.conf
+++ b/deployment/000-default.conf
@@ -4,6 +4,7 @@
      ServerAdmin louis.suo@gmail.com
      DocumentRoot /var/www/public
      SetEnv APPLICATION_ENV "development"
+     SetEnv HOME "/var/www"
 
      ErrorLog ${APACHE_LOG_DIR}/error.log
      CustomLog ${APACHE_LOG_DIR}/access.log combined
