--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "~2.4.11"
+        "zendframework/zendframework": "~2.4.11",
+        "aws/aws-sdk-php": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.27"
